# GRP-Obliteration

./: .gitignore  CLAUDE.md  H100_SETUP.md  M4_FINAL_GUIDE.md  M4_OOM_FIX.md  M4_PRO_SETUP.md  M4_QUICK_START.md  Makefile  README.md  accelerate_config_zero3.yaml  main.py  pyproject.toml
.cursor/rules/: review-before-change.mdc
cache/rewards/: cache.db
configs/: base.yaml
configs/experiments/: dev-mps.yaml  dev.yaml  oblit-1-4b-instruct-mps-fast.yaml  oblit-1-fast.yaml  oblit-1-mps-fast.yaml  oblit-1-mps-lowmem.yaml  oblit-1-mps.yaml  oblit-1.yaml  oblit-advbench.yaml
configs/models/: gemma-2-27b-h100.yaml  qwen2_5-14b-gh200.yaml  qwen2_5-14b-h100-4bit.yaml  qwen2_5-14b-h100.yaml  qwen3-0_6.yaml  qwen3-0_6b-instruct-mps-fp16.yaml  qwen3-0_6b-mps-fp16.yaml  qwen3-0_6b.yaml  qwen3-4b-instruct-mps-fp16.yaml  qwen3-4b-mps-fp16.yaml  qwen3-4b-mps.yaml  qwen3-4b.yaml  qwen3-8b-h100.yaml  qwen3-8b.yaml  qwen3-coder-next-h100.yaml
scripts/: analyze.py  compare_models.py  debug_judge.py  evaluate.py  run_mps.sh  smoke_test.py  sweep.py  test_unalignment.py  train.py
src/analysis/: __init__.py  cross_category.py  refusal_subspace.py
src/data/: __init__.py  loader.py  prompt_pool.py
src/eval/: __init__.py  internal_perception.py  judges.py  safety.py  utility.py
src/reward/: __init__.py  aggregator.py  judge.py  prompts.py
src/training/: __init__.py  callbacks.py  kl.py  trainer.py
src/utils/: __init__.py  profiling.py
tests/: test_advantages.py  test_data.py  test_reward.py
wandb/: latest-run
wandb/run-20260215_174325-shssp761/: run-shssp761.wandb
(+32 files in other folders)
