[project]
name = "grp-oblit"
version = "0.1.0"
description = "GRP-Obliteration: GRPO-based unalignment research implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "trl>=0.12.0",
    "datasets>=3.0.0",
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "openai>=1.50.0",
    "anthropic>=0.39.0",
    "lm-eval>=0.4.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "wandb>=0.18.0",
    "tenacity>=9.0.0",
    "diskcache>=5.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "ipykernel>=6.29.0",
]
# Linux-only; omit on macOS to run judge debug, OpenAI/Anthropic training, etc.
vllm = ["vllm>=0.6.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"